// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reply renders correctly 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  delayLongPress={600}
  disabled={true}
  extraButtonProps={
    Object {
      "rippleColor": "transparent",
    }
  }
  onLongPress={[Function]}
>
  <View
    style={
      Array [
        Object {
          "borderBottomColor": "rgb(255, 255, 255)",
          "borderBottomWidth": 3,
          "margin": 10,
        },
        Object {
          "opacity": 1,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingVertical": 10,
        }
      }
    >
      <Avatar
        avatarPath={
          Object {
            "testUri": "../../../app/assets/images/profile-pic-annon.png",
          }
        }
        size="small"
        userId="1235we"
      />
      <View
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <Title
          small={true}
          text="May"
        />
        <Text
          style={
            Object {
              "color": "rgb(51, 51, 51)",
              "fontStyle": "italic",
            }
          }
        >
          Há um ano
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "paddingBottom": 20,
        }
      }
    >
      <RichTextDisplay
        item={
          Object {
            "author": Object {
              "avatarPath": Object {
                "testUri": "../../../app/assets/images/profile-pic-annon.png",
              },
              "id": "1235we",
              "name": "May",
            },
            "comment": Object {
              "author": Object {
                "avatarPath": Object {
                  "testUri": "../../../app/assets/images/profile-pic-annon.png",
                },
                "id": "1235we",
                "name": "May",
              },
              "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
              "discussionLevel": 0,
              "edited": false,
              "id": "21097",
              "isAuthorCurrentUser": false,
              "post": Object {
                "author": Object {
                  "avatarPath": Object {
                    "testUri": "../../../app/assets/images/empower_two_women_logo.png",
                  },
                  "id": "1235we",
                  "name": "Empodere Duas Mulheres",
                  "posts": Array [],
                },
                "comments": Array [],
                "content": null,
                "id": "10387-314fs-12asdbj",
                "imagePath": Object {
                  "testUri": "../../../app/assets/images/image_post_1.jpg",
                },
                "publishedAt": 2000-01-01T00:00:00.000Z,
              },
              "publishedAt": 2019-01-01T00:00:00.000Z,
              "replies": Array [],
              "totalReplies": 0,
            },
            "content": "Nao.",
            "edited": false,
            "id": "21097",
            "isAuthorCurrentUser": false,
            "link": null,
            "publishedAt": 2019-01-01T00:00:00.000Z,
          }
        }
      />
    </View>
  </View>
  <ActionSheetReply
    item={
      Object {
        "author": Object {
          "avatarPath": Object {
            "testUri": "../../../app/assets/images/profile-pic-annon.png",
          },
          "id": "1235we",
          "name": "May",
        },
        "comment": Object {
          "author": Object {
            "avatarPath": Object {
              "testUri": "../../../app/assets/images/profile-pic-annon.png",
            },
            "id": "1235we",
            "name": "May",
          },
          "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
          "discussionLevel": 0,
          "edited": false,
          "id": "21097",
          "isAuthorCurrentUser": false,
          "post": Object {
            "author": Object {
              "avatarPath": Object {
                "testUri": "../../../app/assets/images/empower_two_women_logo.png",
              },
              "id": "1235we",
              "name": "Empodere Duas Mulheres",
              "posts": Array [],
            },
            "comments": Array [],
            "content": null,
            "id": "10387-314fs-12asdbj",
            "imagePath": Object {
              "testUri": "../../../app/assets/images/image_post_1.jpg",
            },
            "publishedAt": 2000-01-01T00:00:00.000Z,
          },
          "publishedAt": 2019-01-01T00:00:00.000Z,
          "replies": Array [],
          "totalReplies": 0,
        },
        "content": "Nao.",
        "edited": false,
        "id": "21097",
        "isAuthorCurrentUser": false,
        "link": null,
        "publishedAt": 2019-01-01T00:00:00.000Z,
      }
    }
    refProp={[Function]}
  />
</TouchableOpacity>
`;

exports[`Reply renders correctly when edited 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  delayLongPress={600}
  disabled={true}
  extraButtonProps={
    Object {
      "rippleColor": "transparent",
    }
  }
  onLongPress={[Function]}
>
  <View
    style={
      Array [
        Object {
          "borderBottomColor": "rgb(255, 255, 255)",
          "borderBottomWidth": 3,
          "margin": 10,
        },
        Object {
          "opacity": 1,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingVertical": 10,
        }
      }
    >
      <Avatar
        avatarPath={
          Object {
            "testUri": "../../../app/assets/images/profile-pic-annon.png",
          }
        }
        size="small"
        userId="1235we"
      />
      <View
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <Title
          small={true}
          text="May"
        />
        <Text
          style={
            Object {
              "color": "rgb(51, 51, 51)",
              "fontStyle": "italic",
            }
          }
        >
          Há um ano
           (Editada)
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "paddingBottom": 20,
        }
      }
    >
      <RichTextDisplay
        item={
          Object {
            "author": Object {
              "avatarPath": Object {
                "testUri": "../../../app/assets/images/profile-pic-annon.png",
              },
              "id": "1235we",
              "name": "May",
            },
            "comment": Object {
              "author": Object {
                "avatarPath": Object {
                  "testUri": "../../../app/assets/images/profile-pic-annon.png",
                },
                "id": "1235we",
                "name": "May",
              },
              "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
              "discussionLevel": 0,
              "edited": false,
              "id": "21097",
              "isAuthorCurrentUser": false,
              "post": Object {
                "author": Object {
                  "avatarPath": Object {
                    "testUri": "../../../app/assets/images/empower_two_women_logo.png",
                  },
                  "id": "1235we",
                  "name": "Empodere Duas Mulheres",
                  "posts": Array [],
                },
                "comments": Array [],
                "content": null,
                "id": "10387-314fs-12asdbj",
                "imagePath": Object {
                  "testUri": "../../../app/assets/images/image_post_1.jpg",
                },
                "publishedAt": 2000-01-01T00:00:00.000Z,
              },
              "publishedAt": 2019-01-01T00:00:00.000Z,
              "replies": Array [],
              "totalReplies": 0,
            },
            "content": "Nao.",
            "edited": true,
            "id": "21097",
            "isAuthorCurrentUser": false,
            "link": null,
            "publishedAt": 2019-01-01T00:00:00.000Z,
          }
        }
      />
    </View>
  </View>
  <ActionSheetReply
    item={
      Object {
        "author": Object {
          "avatarPath": Object {
            "testUri": "../../../app/assets/images/profile-pic-annon.png",
          },
          "id": "1235we",
          "name": "May",
        },
        "comment": Object {
          "author": Object {
            "avatarPath": Object {
              "testUri": "../../../app/assets/images/profile-pic-annon.png",
            },
            "id": "1235we",
            "name": "May",
          },
          "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
          "discussionLevel": 0,
          "edited": false,
          "id": "21097",
          "isAuthorCurrentUser": false,
          "post": Object {
            "author": Object {
              "avatarPath": Object {
                "testUri": "../../../app/assets/images/empower_two_women_logo.png",
              },
              "id": "1235we",
              "name": "Empodere Duas Mulheres",
              "posts": Array [],
            },
            "comments": Array [],
            "content": null,
            "id": "10387-314fs-12asdbj",
            "imagePath": Object {
              "testUri": "../../../app/assets/images/image_post_1.jpg",
            },
            "publishedAt": 2000-01-01T00:00:00.000Z,
          },
          "publishedAt": 2019-01-01T00:00:00.000Z,
          "replies": Array [],
          "totalReplies": 0,
        },
        "content": "Nao.",
        "edited": true,
        "id": "21097",
        "isAuthorCurrentUser": false,
        "link": null,
        "publishedAt": 2019-01-01T00:00:00.000Z,
      }
    }
    refProp={[Function]}
  />
</TouchableOpacity>
`;
